--- a/Timer App/index.html
+++ b/Timer App/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8" />
-      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Vite + React</title>
+      <title>Timer</title>
    </head>
    <body style="background-color: #1c1c1c; color: white">
       <div id="root"></div>
