--- a/Theme_Changer/index.html
+++ b/Theme_Changer/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>roughapp</title>
+    <title>Theme changer</title>
     <link rel="stylesheet" href="./src/global.css" />
   </head>
   <body>
